--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cornelius Port</title>
+    <title>Corn the lore king</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -33,9 +33,7 @@
         </section>
         <section id="about">
             <h1>About The Page</h1>
-            <p>Xehanort is a bald guy that just loves possesing angsty teenage chracters 
-                with long hair and say its for the "LORE," by that he means he loves trolling his buddy 
-                Eraqus about darkness and light
+            <p>WHen you walk away, you dont hear me say!
             </p>
         </section><!--End of about-->
         <section id="contact">
