--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         align-items-center">
             <h1>Cornelius Carswell</h1>
             <h3>One Awesome Gamer</h3>
-            <code>C# is king</code>
+            <code>Apple</code>
             <a href="#about"><span class="material-symbols-outlined" id="arrowDown"><!--this is to provide an arrow to the webpage-->
                 expand_more
                 </span>
