--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
         </section>
         <footer>
-            © 2024 Hack Upstate LLC
+            © 2024 Hack ORANGE LLC
         </footer>
     </div><!--End of container fluid-->
 </body>
