--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container"><!--Start of div-->
         <section id="intro" class="d-flex flex-column justify-content-center
         align-items-center">
-            <h1>Cornelius Carswell</h1>
+            <h1>Nathan Evans</h1>
             <h3>One Awesome Gamer</h3>
             <code>Apple</code>
             <a href="#about"><span class="material-symbols-outlined" id="arrowDown"><!--this is to provide an arrow to the webpage-->
